


syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.ca.ChatSupport";
option java_outer_classname = "NewServiceImpl3";



service chatSupport{

	//bidirectional streaming
	rpc GetChatSupport(stream HelloRequest4) returns(stream HelloReply4){}

}

//bidirectional streaming
message HelloRequest4 {
	string name4 = 1;

}

message HelloReply4 {
	string message4 = 1;
}
